Add WhiteNoise for Heroku deployment

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,8 @@ pylint = "*"
 django = "*"
 django-imagekit = '*'
 django-annoying = '*'
-
+gunicorn = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
