Update package requirements in Pipefile

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,12 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+django = "*"
+pillow = "*"
+django-imagekit = "*"
+django-annoying = "*"
+gunicorn = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
